@@ -663,10 +663,11 @@ if (isset($_GET['id'])) {
 	if (!resellerHasFeature('php')) $tpl->assign('PHP_FEATURE', '');
 	if (!resellerHasFeature('php_editor')) $tpl->assign('PHP_EDITOR_FEATURE', '');
 	if (!resellerHasFeature('cgi')) $tpl->assign('CGI_FEATURE', '');
-	if (!resellerHasFeature('custom_dns_records')) $tpl->assign('CUSTOM_DNS_FEATURE', '');
+	if (!resellerHasFeature('custom_dns_records')) $tpl->assign('CUSTOM_DNS_RECORDS_FEATURE', '');
 	if (!resellerHasFeature('aps')) $tpl->assign('APS_FEATURE', '');
 	if (!resellerHasFeature('external_mail')) $tpl->assign('EXT_MAIL_FEATURE', '');
 	if (!resellerHasFeature('backup')) $tpl->assign('BACKUP_FEATURE', '');
+	if (!resellerHasFeature('web_folder_protection')) $tpl->assign('WEB_FOLDER_PROTECTION_FEATURE', '');
 
 	$tpl->parse('LAYOUT_CONTENT', 'page');
 
